--- a/application/package.json
+++ b/application/package.json
@@ -44,7 +44,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.42",
-    "@react-native-picker/picker": "2.11.0"
+    "@react-native-picker/picker": "2.11.0",
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
