--- a/application/package.json
+++ b/application/package.json
@@ -46,7 +46,8 @@
     "@react-native-picker/picker": "2.11.0",
     "expo-print": "~14.1.4",
     "expo-sharing": "~13.1.5",
-    "expo-file-system": "~18.1.10"
+    "expo-file-system": "~18.1.10",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
