--- a/application/package.json
+++ b/application/package.json
@@ -47,7 +47,8 @@
     "expo-print": "~14.1.4",
     "expo-sharing": "~13.1.5",
     "expo-file-system": "~18.1.10",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-document-picker": "~13.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
