--- a/application/package.json
+++ b/application/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -20,12 +22,16 @@
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
+    "expo-print": "~14.1.4",
     "expo-router": "~5.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-sqlite": "^15.2.10",
     "expo-status-bar": "~2.2.3",
@@ -42,13 +48,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zod": "^3.25.42",
-    "@react-native-picker/picker": "2.11.1",
-    "expo-print": "~14.1.4",
-    "expo-sharing": "~13.1.5",
-    "expo-file-system": "~18.1.10",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-document-picker": "~13.1.6"
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
