feat: Update app name to 'MediTrack'; refactor AppLayout for cleaner structure and enhance OutOfStock component with dynamic styling

--- a/application/app.json
+++ b/application/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "pharma-store",
+    "name": "MediTrack",
     "slug": "pharma-store",
     "version": "1.0.0",
     "orientation": "portrait",
