Implement code changes to enhance functionality and improve performance

--- a/application/app.json
+++ b/application/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "MediTrack",
+    "name": "MMMS Stock",
     "slug": "pharma-store",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -30,7 +30,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash.png",
+          "image": "./assets/images/adaptive-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
